fix resume spacing

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -96,27 +96,32 @@ nav{
 	background-color: #484E52;
 }
 
-#resumeTitle{
+#resumeContentContainer{
+	display: inline-block;
 	position: relative;
-	height: 100%;
-	width: 20%;
+	width: 100%;
+	background-color: green;
+}
+
+.resumeTitle{
+	position: relative;
+	display: block;
+	height: 50px;
+	width: 100%;
+	min-width: 100px;
 	background-color: pink;
+	clear:both;
 	text-align: center;
 }
 
-#resumeContentContainer{
-	position: relative;
-	width: 100%;
-	height: 200px;
-	background-color: green;
-}
 
 .skillContainer{
 	position: relative;
 	display: inline-block;
-	width: 27.5%;
+	width: 33.33%;
+	min-width: 300px;
 	height: 100%;
-	float: right;
+	float: left;
 	background-color: blue;
 }
 
